--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     <script>
         // Substitua pela URL da "Nova Implantação" do seu Apps Script
-        const API_URL = "https://script.google.com/macros/s/AKfycbxePib6nkhaTLjwPZVP_mg9QavJeHYUFAhleJZBaIhlUZ-8kF9l1xcwLR2a1_UaUwu0/exec";
+        const API_URL = "https://script.google.com/macros/s/AKfycby2rgShk4zrZJq92Bpj2lbrysV9qDaXCYNFwkXvB0CN1hEfoTdUd-XbZ7dT3x3ZGeTt/exec"
         
         let dadosOriginais = [];
 
