--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>CORE</title>
+    <div class= "p-4 border-b border-white/10 flex items-center gap-3">
+        <img src="logo.png" alt="logo" class="w-10 h-10 object-contain">
+        <span class="text-kg font-bold"> CORE</span>"
+    </div>
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
