--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
           <th class="p-3">Qtd</th>
           <th class="p-3">Solicitante</th>
           <th class="p-3">Status</th>
+          <th class="p-3">Comprador</th>
+          <th class="p-3">Data Finalização</th>
           <th class="p-3">Ação</th>
         </tr>
       </thead>
